--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/icon.jpg">
     <!-- ##### STYLESHEETS ##### -->
+    <!--csshake-->
+    <link href="css/csshake.min.css" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Owl Carousel -->
@@ -87,7 +89,7 @@
                                 <a href="#course">Courses</a>
                             </li>
                             <li>
-                                <a href="#ec">Extra Curricular</a>
+                                <a href="#we">Work Experience</a>
                             </li>
                             <li>
                                 <a href="#contact">Contact</a>
@@ -118,11 +120,9 @@
                             <h2><span>01</span>About me</h2>
                         </div>
                         <!-- end Section Title -->
-                        <h1>Hello, I am Kevin Chan</h1>
-                        <p>I am currently a new grad from UC Davis and majored in Computer Science.
-                        I am looking for opportunites in Front End Web Development.  I love learning
-                        and exploring new technologies.  Check out my Github <a href=https://github.com/kchan1127>here!</a>.
-                      </p>
+                        <h1>Greetings, Mu name is Kevin Chan❗</h1>
+                        <p>I am currently a new grad from UC Davis and majored in Computer Science. I am looking for opportunites in Front End Web Development. I love learning and using my technical skills to help others. Check out my Github <a href=https://github.com/kchan1127>here!</a>.
+                        </p>
 
 
                         <div class="skills">
@@ -232,7 +232,7 @@
                                         <!-- end popup content -->
                                     </div>
                                 </div>
-        </div>
+                            </div>
     </section>
     <!-- end Portfolio section -->
 
@@ -279,22 +279,22 @@
                         </div>
                         <!-- end Section Title -->
                         <div style="float: left; width: 50%;">
-                          <ul>
-                            <li>Software Development & OOP</li>
-                            <li>Computer Networks</li>
-                            <li>Computer Architecture</li>
-                            <li>Programming Languages</li>
-                            <li>Topology</li>
-                          </ul>
-                          </div>
-                          <div style="float: right; width: 50%;">
-                          <ul>
-                            <li>Data Structures & Programming</li>
-                            <li>Operating Systems</li>
-                            <li>Algorithm Design & Analysis</li>
-                            <li>Computation Structural Bioinformatics</li>
-                            <li>Combinatorics</li>
-                          </ul>
+                            <ul>
+                                <li>Software Development & OOP</li>
+                                <li>Computer Networks</li>
+                                <li>Computer Architecture</li>
+                                <li>Programming Languages</li>
+                                <li>Topology</li>
+                            </ul>
+                        </div>
+                        <div style="float: right; width: 50%;">
+                            <ul>
+                                <li>Data Structures & Programming</li>
+                                <li>Operating Systems</li>
+                                <li>Algorithm Design & Analysis</li>
+                                <li>Computation Structural Bioinformatics</li>
+                                <li>Combinatorics</li>
+                            </ul>
                         </div>
                         <!-- end Blog Post 3 -->
                     </div>
@@ -307,43 +307,60 @@
     <!-- end Blog section -->
 
     <!-- Testimonial section -->
-    <section id="ec">
+    <section id="we">
         <div class="testimonial-background">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-9 col-sm-offset-3 testimonialWrapper">
                         <!-- Section Title -->
                         <div class="section-title">
-                            <h2><span>05</span>Extra-Curricualar</h2>
+                            <h2><span>05</span>Work Experience</h2>
                         </div>
+                        <b>IT Support Assistant (Independent Contractor)</b>
+                        <div class="ec1" <br>
+                            7/2016 - Present
+                            <ul type="square">
+                                <i>⭐ Provide assistance in configuring new desktops which includes transferring data in between computers and software installation requested by employees.</i>
+                                <br>
+                                <i>⭐ Apply knowledge in IT to troubleshoot issues relating to printer and network connectivity.</i>
+                            </ul>
+                        </div>
+                        <br>
+                        <b>DreamForce Staff Assistant</b>
+                        <div class="ec1" <br>
+                            October 2016
+                            <ul type="square">
+                                <i>⭐ Responsible for conveying information about Kugamon’s products to 500+ potential clients.</i>
+                            </ul>
+                        </div>
+                        <br>
 
-                      <b>Udemy Web Dev Courses</b>
-                      <div class="ec1"
+                        <b>Udemy Web Dev Courses</b>
+                        <div class="ec1" <br>
+                            6/2016 - 8/2016
+                            <ul type="square">
+                                <i>⭐ Classes are designed to help gain skills through web application development and projects.</i>
+                            </ul>
+                        </div>
                         <br>
-                        6/2016 - 8/2016
-                        <ul type="square">
-                          <i>Classes are designed to help gain skills through web application development and projects.</i>
-                        </ul>
-                      </div>
-                      <br>
-                      <b>Computer Science for Kids Outreach Group</b>
-                      <div class="ec2"
+                        <b>Computer Science for Kids Outreach Group</b>
+                        <div class="ec2" <br>
+                            1/2016 - 4/2016
+                            <ul type="square">
+                                <i>⭐ Led a interactive classes for a group of 25 students to develop their own games and import animations through ScratchMIT.</i>
+                                <br>
+                                <i>⭐ Assisted students with CodeCombat, an online coding strategy game written in JavaScript.</i>
+                            </ul>
+                        </div>
                         <br>
-                        1/2016 - 4/2016
-                        <ul type="square">
-                          <i>Led a interactive classes for a group of 25 students to develop their own games and import animations through ScratchMIT.</i>
-                        </ul>
-                      </div>
-                      <br>
-                      <b>Davis CS Club</b>
-                      <div class="ec3"
+                        <b>Davis CS Club</b>
+                        <div class="ec3" <br>
+                            9/2013 - 6/2016
+                            <ul type="square">
+                                <i>⭐ Attained invaluable leadership and technical skills through professional development workshops.</i>
+                            </ul>
+                        </div>
                         <br>
-                        9/2013 - 6/2016
-                        <ul type="square">
-                          <i>Attained invaluable leadership and technical skills through professional development workshops.</i>
-                        </ul>
-                      </div>
-                      <br>
                     </div>
                 </div>
                 <!-- end row -->
@@ -408,7 +425,8 @@
                         <!-- end Inner row -->
                         <!-- Google Maps -->
                         <div class="google-maps">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d201795.3957565219!2d-122.4998703!3d37.7887963!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80859a6d00690021%3A0x4a501367f076adff!2sSan+Francisco%2C+CA!5e0!3m2!1sen!2sus!4v1475124398279" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d201795.3957565219!2d-122.4998703!3d37.7887963!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80859a6d00690021%3A0x4a501367f076adff!2sSan+Francisco%2C+CA!5e0!3m2!1sen!2sus!4v1475124398279" width="600"
+                                height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                         <!-- end Google Maps -->
                     </div>
@@ -426,9 +444,12 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-9 col-sm-offset-3 footer-background">
                     <div class="row">
-                        <div class="col-sm-6 text-right">
-                            Designed With <i class="fa fa-heart red"></i> By Kevin Chan<i class="fa fa-hand-peace-o 3x" aria-hidden="true"></i></a>
+
+                        <div class="col-sm-6 text-right shake-slow shake-constant">
+                            Designed With <i class="fa fa-heart red"></i>
+                           By Kevin Chan<i class="fa fa-hand-peace-o 3x" aria-hidden="true"></i></a>
                         </div>
+                      </div>
                     </div>
 
                 </div>
@@ -459,7 +480,7 @@
         document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
             ':35729/livereload.js?snipver=1"></' + 'script>')
     </script>
-        <script src="https://use.fontawesome.com/093f6dc81d.js"></script>
+    <script src="https://use.fontawesome.com/093f6dc81d.js"></script>
 </body>
 
 </html>
