--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <h2><span>01</span>About me</h2>
                         </div>
                         <!-- end Section Title -->
-                        <h1>Greetings, Mu name is Kevin Chan❗</h1>
+                        <h1>Greetings, My name is Kevin Chan❗</h1>
                         <p>I am currently a new grad from UC Davis and majored in Computer Science. I am looking for opportunites in Front End Web Development. I love learning and using my technical skills to help others. Check out my Github <a href=https://github.com/kchan1127>here!</a>.
                         </p>
 
